--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://discord.com/users/541388135712423936" target="_blank">
                         <i class="fab fa-discord"></i>
                     </a>
-                <a href="https://www.tiktok.com/@kamidrills" target="_blank">
+                <a href="https://www.tiktok.com/@dxv333" target="_blank">
                         <i class="fab fa-tiktok"></i>
                     </a>
                 <a href="https://github.com/dxv3/" target="_blank">
