--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
         <div class="header">
             <a href="https://discord.com/users/541388135712423936" class="discordProfile">
-                    <iframe height="218px" width="410px" scrolling="no" src="https://lanyard.cnrad.dev/api/541388135712423936?borderRadius=5px&idleMessage=not%20up%20to%20anything&bg=a&animated=true&showDisplayName=true" frameborder="0"></iframe>
+                    <iframe height="218px" width="410px" scrolling="no" src="https://lanyard.cnrad.dev/api/541388135712423936?borderRadius=5px&idleMessage=i%20am%20doing%20NOTHING&bg=a&animated=true&showDisplayName=true" frameborder="0"></iframe>
                 </a>
             <p>kami!</p>
             <p>⠀</p>
