--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="">
     <meta property="og:url" content="https://perc.pro">
     <meta property="og:title" content="dxv3">
-    <meta property="og:description" content="kys" <meta property="og:type" content="website">
+    <meta property="og:description" content="kys"> <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/1088461750598389862/1224529154939289751/giphy.gif?ex=661dd2a5&is=660b5da5&hm=d8d1aba373eee2203e691f8c3433ad8daedb5bb9b240d67f9b6b0cd0f275a937&">
     <meta content="#2f3136" data-react-helmet="true" name="theme-color" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"
