--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
 </head>
 
 <body>
+
+    <!-- audio  -->
+    <audio id="background-music" autoplay loop>
+        <source src="domain/assets/audio/audio.mp3" type="audio/mpeg">
+    </audio>
+
     <div class="bg-animation">
         <div id="stars"></div>
         <div id="stars2"></div>
